Improving URI validation to support mobile callback urls.